fix(styles): fix drop cap alignment and size

--- a/style.css
+++ b/style.css
@@ -268,9 +268,10 @@ body {
     font-size: 24px;
     color: #b88b7d;
     float: left;
-    margin-right: 3px;
-    line-height: 1;
-    margin-top: 3px;
+    margin-right: 15px;
+    margin-left: 10px;
+    line-height: 0px;
+    margin-top: 11px;
 }
 
 /* Подвал - как деревянная доска или тканевая окантовка */
